fixed text-alignment

--- a/_tablet.scss
+++ b/_tablet.scss
@@ -1,30 +1,3 @@
-// //navbar
-// .nav {
-//   &__list {
-//     .nav__item {
-//       .nav__link {
-//         font-size: 1.5rem;
-//         transition: text-decoration 0.3s ease-in-out;
-//       }
-
-//       &:hover {
-//         .nav__link {
-//           text-decoration: underline;
-//         }
-//       }
-//     }
-//   }
-// }
-
-// //stäng-kryss
-
-// .menu {
-//   .menu__burger--close {
-//     margin-left: -5px;
-//     padding-left: 10px;
-//     padding-bottom: 10px;
-//   }
-// }
 // // kort med info om Cornelia
 body {
   border: 60px solid rgba(138, 138, 138, 0.5);
@@ -131,8 +104,8 @@ body {
       flex-basis: 50%;
       padding: 20px;
     }
-    .work__container,
-    .education__container {
+    .articleWork,
+    .articleEducation {
       flex-basis: 50%;
       padding: 20px;
     }
